Added -static flag to libmimirbackend compilation to fix Windows linking bugs.

--- a/libmimirbackend/makefile
+++ b/libmimirbackend/makefile
@@ -1,5 +1,5 @@
 libmimirbackend.so: objects/mimirbackend.o
-	g++ -shared -o libmimirbackend.so objects/mimirbackend.o
+	g++ -static -shared -o libmimirbackend.so objects/mimirbackend.o
 
 objects/mimirbackend.o: sources/mimirbackend.cpp sources/mimirbackend.h
 	g++ -fPIC -o objects/mimirbackend.o -c sources/mimirbackend.cpp
